Fix post excerpt font and truncation

--- a/app/assets/stylesheets/application/modules/molecules/_post.scss
+++ b/app/assets/stylesheets/application/modules/molecules/_post.scss
@@ -72,6 +72,7 @@
 
 .m-post__excerpt {
   margin-top: 20px;
+  font-family: $body-font;
 }
 
 .m-post__images {
